dataset1235/2025-2/2947369575/users/1754031506/executions/3873599344_2416501300.log
== RUN (2025-08-20 22:42:58)
-- CODE: 
print("*****")
print("***")
print("*")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
 *** 
  *
---- user output:
*
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
 *** 
  *
---- user output:
*
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-20 22:42:50)
-- CODE: 
print("*****")
print("***")
print("*")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
 *** 
  *
---- user output:
*
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
 *** 
  *
---- user output:
*
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-20 22:42:49)
-- CODE: 
print("*****")
print("***")
print("*")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
 *** 
  *
---- user output:
*
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
 *** 
  *
---- user output:
*
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-20 22:42:40)
-- CODE: 
print("*****")
print("***")
print("*")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
 *** 
  *
---- user output:
*
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
 *** 
  *
---- user output:
*
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-20 22:42:26)
-- CODE: 
print("*****")
print(""***)
print("*")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
 *** 
  *
-- ERROR:
File "XXXX", line 2
    print(""***)
              ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
 *** 
  *
-- ERROR:
File "XXXX", line 2
    print(""***)
              ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 22:42:44)
-- CODE: 
print("*****")
print("***")
print("*")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
 *** 
  *
---- user output:
*
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
 *** 
  *
---- user output:
*
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
